Bug 901348 - Apply upstream ICU patch to fix OSX 10.9 build errors. r=Waldo